--- a/style.css
+++ b/style.css
@@ -37,5 +37,6 @@ body{
 .single-result{
     background: rgba(255, 255, 255, 0.2);
     border-radius: 15px;
+    box-shadow: 6px 6pt lightslategrey ;
 }
 
